testing/macro-tests/tests/ui/index_field_not_found.stderr
error: index field 'missing_field' not found
  --> tests/ui/index_field_not_found.rs:20:21
   |
20 |     index(fields = ["missing_field"]),
   |                     ^^^^^^^^^^^^^^^
